Project

General

Profile

Actions

Bug #49557

closed

notification: persistent notifications stop when ack-levl=none

Added by Yuval Lifshitz about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
notification
Backport:
pacific
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when a persistent notifications for amqp/kafka are set with amqp/kafka-ack-level=none, only the first notification is sent.
any consequent notifications are not sent.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #50156: pacific: notification: persistent notifications stop when ack-levl=noneResolvedsinguliere _Actions
Actions #1

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 39790
Actions #2

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50156: pacific: notification: persistent notifications stop when ack-levl=none added
Actions #4

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF