rgw/notification: fix persistent notification hang when ack-levl=none

when a persistent notifications for amqp/kafka are set with
amqp/kafka-ack-level=none, only the first notification is sent.
any consequent notifications are not sent.

Fixes: https://tracker.ceph.com/issues/49557

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit e208b79574eef579ba51423ac6f7aa6105c174ba)